# sinfourmis2025

./: .gitignore  Dockerfile  strats.txt
fourmiryade/: CMakeLists.txt  cartographer.cpp  explorator.cpp  explorer.cpp  fourmis.cpp  memory.cpp  queen.cpp  structures.cpp  utils.cpp  workers.cpp
include/: sinfourmis.h
include/game/: ant.hpp  queen.hpp  team.hpp
include/interfaces/: shared.hpp
include/map/: map.hpp  node.hpp
interfaces/examples/cpp/: CMakeLists.txt  fourmis.cpp
interfaces/examples/ocaml/: sinfourmis.ml
interfaces/ocaml/: cstub.c
interfaces/rust/src/: lib.rs
maps/: grid.json  grid.py  net.json  spiral.json  spiral.py  test.json  windmil.json
src/: main.cpp
src/animation/: animation.cpp
src/debugger/: debugger.cpp
src/game/: ant.cpp  game.cpp  queen.cpp
src/interfaces/: dummy.cpp  python.cpp  shared.cpp
src/map/: map.cpp  node.cpp
